@@ -16,42 +16,46 @@ EBUILD emacs-cvs-22.0.95-r3.ebuild 6605 RMD160 309fdf7aae95829cfde36986a540e0ae9
 MD5 521b468c7ac6d2709a8b6d4a58d21844 emacs-cvs-22.0.95-r3.ebuild 6605
 RMD160 309fdf7aae95829cfde36986a540e0ae9b2f97dc emacs-cvs-22.0.95-r3.ebuild 6605
 SHA256 bfdc5c5907402a33be1c9f3bed4390f6697df314312574e946a5e31c14cd6a50 emacs-cvs-22.0.95-r3.ebuild 6605
-EBUILD emacs-cvs-22.0.96.ebuild 6724 RMD160 f78807f0d1d4d045b9f97b6931c748732f16cd65 SHA1 d2b87e0ec30d4200c870eed0ac0993b2f7d2bc49 SHA256 02dcb915f59889e23af9ec60d20c4053b4a7dba19beaa0e841081df180b1e749
-MD5 a9701464f3dd9b3ed5ce312d4145c56f emacs-cvs-22.0.96.ebuild 6724
-RMD160 f78807f0d1d4d045b9f97b6931c748732f16cd65 emacs-cvs-22.0.96.ebuild 6724
-SHA256 02dcb915f59889e23af9ec60d20c4053b4a7dba19beaa0e841081df180b1e749 emacs-cvs-22.0.96.ebuild 6724
+EBUILD emacs-cvs-22.0.96.ebuild 6739 RMD160 5cc35203fa308ef64f078c5980bb7c684d30efc8 SHA1 e03a83420fac023f67a2f7009cca301262e9961b SHA256 eeacc3d721aaa55a6322c3703a34123347d0a131ae7918910f1d5722c1a07458
+MD5 2c9fe764afaef0712616a7044578e871 emacs-cvs-22.0.96.ebuild 6739
+RMD160 5cc35203fa308ef64f078c5980bb7c684d30efc8 emacs-cvs-22.0.96.ebuild 6739
+SHA256 eeacc3d721aaa55a6322c3703a34123347d0a131ae7918910f1d5722c1a07458 emacs-cvs-22.0.96.ebuild 6739
 EBUILD emacs-cvs-22.0.9999-r7.ebuild 6670 RMD160 e843977065abd6b3603f3c9a746ac45b8f6b00e9 SHA1 4885e79514fec166341abac320b571fa30057d9b SHA256 b893bddb387bac5f93f1e7869a5cd25ceefe4a48e93df45aad07ac3ad1688ec3
 MD5 eae681a69040f7823d8288d63783777c emacs-cvs-22.0.9999-r7.ebuild 6670
 RMD160 e843977065abd6b3603f3c9a746ac45b8f6b00e9 emacs-cvs-22.0.9999-r7.ebuild 6670
 SHA256 b893bddb387bac5f93f1e7869a5cd25ceefe4a48e93df45aad07ac3ad1688ec3 emacs-cvs-22.0.9999-r7.ebuild 6670
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 6789 RMD160 2d9d55a106873e6d6c7d9c3029ef2bb981619a09 SHA1 79f89685034058f0f3a4670efcc280909bf7b870 SHA256 390c2bde62617590ea66212ddc5cb6f7fe82b279553bafb41bb6fe9d0145b1e4
-MD5 6936acb39f825a3b43d548a1be1a63d6 emacs-cvs-22.0.9999-r8.ebuild 6789
-RMD160 2d9d55a106873e6d6c7d9c3029ef2bb981619a09 emacs-cvs-22.0.9999-r8.ebuild 6789
-SHA256 390c2bde62617590ea66212ddc5cb6f7fe82b279553bafb41bb6fe9d0145b1e4 emacs-cvs-22.0.9999-r8.ebuild 6789
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 6804 RMD160 a695587bd1e7b305f43e70f93c652adecbd3a38a SHA1 31b55c1f54d8c12368d71930ddbdaccde32dd9d5 SHA256 034647a82bdbaa54e0bf9bea7408212a23f53a85c44aca51754ae6796d9143c2
+MD5 2591aee35e909f16c0eb82cf9ba82157 emacs-cvs-22.0.9999-r8.ebuild 6804
+RMD160 a695587bd1e7b305f43e70f93c652adecbd3a38a emacs-cvs-22.0.9999-r8.ebuild 6804
+SHA256 034647a82bdbaa54e0bf9bea7408212a23f53a85c44aca51754ae6796d9143c2 emacs-cvs-22.0.9999-r8.ebuild 6804
 EBUILD emacs-cvs-23.0.0-r3.ebuild 6927 RMD160 39d611a99a184cc3ce0a0e9c88567ba207a3b282 SHA1 2ea5c161c24680fd88f58bf85897122a9bdb40e3 SHA256 f158337dedd3410e9b2dc37b35db5656c153fd587a5ab6758889ebe9ddc8c50c
 MD5 3da6e9699bbade5decf3b71a4427a2e8 emacs-cvs-23.0.0-r3.ebuild 6927
 RMD160 39d611a99a184cc3ce0a0e9c88567ba207a3b282 emacs-cvs-23.0.0-r3.ebuild 6927
 SHA256 f158337dedd3410e9b2dc37b35db5656c153fd587a5ab6758889ebe9ddc8c50c emacs-cvs-23.0.0-r3.ebuild 6927
-EBUILD emacs-cvs-23.0.0-r4.ebuild 7046 RMD160 29cdf96d5004f784ce4fa0108dac930c2b29ebf4 SHA1 97027c7797005ae74e7bf70557f9400a22954834 SHA256 2957d30565bf84dc867742f2ee25439b8e788a02786da921793a1e667b3596ef
-MD5 aa795ccaa39d37bfe059ac384701e220 emacs-cvs-23.0.0-r4.ebuild 7046
-RMD160 29cdf96d5004f784ce4fa0108dac930c2b29ebf4 emacs-cvs-23.0.0-r4.ebuild 7046
-SHA256 2957d30565bf84dc867742f2ee25439b8e788a02786da921793a1e667b3596ef emacs-cvs-23.0.0-r4.ebuild 7046
-MISC ChangeLog 6203 RMD160 2134b0b410e3d9b8a756cab36f597170b286d915 SHA1 a6372d2d8c3b65fdf20afb284f46dbea10ef4f16 SHA256 7c40521d52bb0ca2399dd674b9205eb1e70f870d98ed95d9bd2a619b3281c0f0
-MD5 23138d50101696967cd6b397fd738063 ChangeLog 6203
-RMD160 2134b0b410e3d9b8a756cab36f597170b286d915 ChangeLog 6203
-SHA256 7c40521d52bb0ca2399dd674b9205eb1e70f870d98ed95d9bd2a619b3281c0f0 ChangeLog 6203
-MISC emacs-cvs-22.0.96.ebuild~ 6694 RMD160 85ced330f7b53246287fb73708f387de8ad1630e SHA1 4b0a4961815e200d131737257c39d3b4657b6213 SHA256 cb4937a6cf90a7d7a4c4078ad11cff54296f266528b7dad0aa1fb8052b2d7a3e
-MD5 20692012e47fc30a50d652d69f5cdebc emacs-cvs-22.0.96.ebuild~ 6694
-RMD160 85ced330f7b53246287fb73708f387de8ad1630e emacs-cvs-22.0.96.ebuild~ 6694
-SHA256 cb4937a6cf90a7d7a4c4078ad11cff54296f266528b7dad0aa1fb8052b2d7a3e emacs-cvs-22.0.96.ebuild~ 6694
-MISC emacs-cvs-22.0.9999-r8.ebuild~ 6759 RMD160 66236c254223cb2eeb3c1f4147e53729de1a535e SHA1 3d47e54011279a1bc46dabbcb25ab13642279be1 SHA256 9e4957646ee245b04598aee2364e6b1f1689957421e94c688172ff307bd03c6f
-MD5 89366a02826ce8cbbd7dab37bba85f78 emacs-cvs-22.0.9999-r8.ebuild~ 6759
-RMD160 66236c254223cb2eeb3c1f4147e53729de1a535e emacs-cvs-22.0.9999-r8.ebuild~ 6759
-SHA256 9e4957646ee245b04598aee2364e6b1f1689957421e94c688172ff307bd03c6f emacs-cvs-22.0.9999-r8.ebuild~ 6759
-MISC emacs-cvs-23.0.0-r4.ebuild~ 7016 RMD160 7a26eaeb196d4520e70dcc750737a0063a2627eb SHA1 e13403669b283c598c2fff443715351f86c68246 SHA256 68701eb8d47e11966832d3f9effcd8ebe4c0558484c08fd44bb15d89b741cfce
-MD5 c1b36a985c76d37a9e587eef578ecb8d emacs-cvs-23.0.0-r4.ebuild~ 7016
-RMD160 7a26eaeb196d4520e70dcc750737a0063a2627eb emacs-cvs-23.0.0-r4.ebuild~ 7016
-SHA256 68701eb8d47e11966832d3f9effcd8ebe4c0558484c08fd44bb15d89b741cfce emacs-cvs-23.0.0-r4.ebuild~ 7016
+EBUILD emacs-cvs-23.0.0-r4.ebuild 7061 RMD160 846ae8d6eb8f492cc2f1388edaa48d5490096e10 SHA1 6d90c60496a840a8ae7f877ab0b4410e7c4a81f6 SHA256 c2a7b0812b2abecd1b1ed237a0051efec98749c83b6de4f99f6fedcac99ce719
+MD5 bba6386306db13b34f37fe4cc1f809a8 emacs-cvs-23.0.0-r4.ebuild 7061
+RMD160 846ae8d6eb8f492cc2f1388edaa48d5490096e10 emacs-cvs-23.0.0-r4.ebuild 7061
+SHA256 c2a7b0812b2abecd1b1ed237a0051efec98749c83b6de4f99f6fedcac99ce719 emacs-cvs-23.0.0-r4.ebuild 7061
+MISC ChangeLog 6391 RMD160 71098d9dd53fafc5ddb87d11387a57d40817fd90 SHA1 5da43d710a82c0cfb723dfd321bc84d2c1f12113 SHA256 2a1a9ad3be40ea79396f733591fdeee82113d3a48bd7cd603babcda24b5daae5
+MD5 ffed3a5a6d9a5e2596a26cfb348f4b53 ChangeLog 6391
+RMD160 71098d9dd53fafc5ddb87d11387a57d40817fd90 ChangeLog 6391
+SHA256 2a1a9ad3be40ea79396f733591fdeee82113d3a48bd7cd603babcda24b5daae5 ChangeLog 6391
+MISC ChangeLog.new~ 38 RMD160 76445b47f7ea562df3106317a7d09775850ba30e SHA1 9406facf2293e7c06f9473309b653e9f89cb0999 SHA256 8382b5ce6b4e4a60f60396c6b80ab48ce9d79c0106bf9d8c015776866aa9fa46
+MD5 74d6337b9ac7f8eb048249a5e0f72878 ChangeLog.new~ 38
+RMD160 76445b47f7ea562df3106317a7d09775850ba30e ChangeLog.new~ 38
+SHA256 8382b5ce6b4e4a60f60396c6b80ab48ce9d79c0106bf9d8c015776866aa9fa46 ChangeLog.new~ 38
+MISC emacs-cvs-22.0.96.ebuild~ 6725 RMD160 a0dbe6d55a6d073edaf576b70d9c2b8391dd60dd SHA1 a5c27278ff1906c838ded1dd79527528b8a3620b SHA256 5998f5f1e3dc22a9200e6262bf29c171e90726023071ce1a1569a6352dc5e864
+MD5 c040d790c55f0f7aac65e87c7cefed60 emacs-cvs-22.0.96.ebuild~ 6725
+RMD160 a0dbe6d55a6d073edaf576b70d9c2b8391dd60dd emacs-cvs-22.0.96.ebuild~ 6725
+SHA256 5998f5f1e3dc22a9200e6262bf29c171e90726023071ce1a1569a6352dc5e864 emacs-cvs-22.0.96.ebuild~ 6725
+MISC emacs-cvs-22.0.9999-r8.ebuild~ 6790 RMD160 e21f9e7a6f15d407153feaf9f7a9000aec40b641 SHA1 4a8b9cf73d530cf1d669f92fb310819db749784e SHA256 72470e8b2114cb7bc23283cab2ad7f4c24b8cf618ad8808dc6bced580eb5b7fe
+MD5 7a391b37ffdac675e90e6a9fbc8819f4 emacs-cvs-22.0.9999-r8.ebuild~ 6790
+RMD160 e21f9e7a6f15d407153feaf9f7a9000aec40b641 emacs-cvs-22.0.9999-r8.ebuild~ 6790
+SHA256 72470e8b2114cb7bc23283cab2ad7f4c24b8cf618ad8808dc6bced580eb5b7fe emacs-cvs-22.0.9999-r8.ebuild~ 6790
+MISC emacs-cvs-23.0.0-r4.ebuild~ 7047 RMD160 5175f1b4d6eb538b0a419c512b1ae47d42cf7874 SHA1 2a9919204f08b2e1355d0d36ff47a2a7db224b7c SHA256 fe7b0c4ef7941bd8ccbbd93844ab973ac09402ecc7b7c98522ed2c5a98afb4aa
+MD5 697724ab9e08a06f9e7c13fb61f85c9d emacs-cvs-23.0.0-r4.ebuild~ 7047
+RMD160 5175f1b4d6eb538b0a419c512b1ae47d42cf7874 emacs-cvs-23.0.0-r4.ebuild~ 7047
+SHA256 fe7b0c4ef7941bd8ccbbd93844ab973ac09402ecc7b7c98522ed2c5a98afb4aa emacs-cvs-23.0.0-r4.ebuild~ 7047
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
