@@ -5,6 +5,11 @@
   20 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
   emacs-cvs-23.0.0-r4.ebuild:
+  Make version check in site-init file work.
+
+  20 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
+  emacs-cvs-23.0.0-r4.ebuild:
   Use /usr/share/emacs/${MIN_VERSION} instead of /usr/share/emacs/${SLOT}.
 
   20 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
